@@ -1,5 +1,6 @@
 2009-04-27
 	* Bugfixes of HL_Case() and delete arributes button.
+	* Bugfixes: when delete a file, delete related coding, caselinkage and treefile accordingly.
 	
 2009-04-26
 	* "Show selected file property" popup menu.
